<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn_text">Log In</string>
    <string name="creat_btn_login">Create New Acount</string>
    <string name="instructions_btn">Instructions</string>
    <string name="welcom_shoe">Welcome Shoe Store</string>
    <string name="inst_clk">Please Click the Button to Continue</string>
    <string name="shoe_list">Shoe List</string>
    <string name="logout">Log out</string>
    <string name="add_shoe">Add Shoe</string>

</resources>
